<resources>
    <string name="app_name">Pedro Mata Rodrigues</string>
    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Fechar Menu</string>
    <string name="nav_header_title">Pedro Mata Rodrigues</string>
    <string name="nav_header_subtitle">Engenharia Informática</string>
    <string name="nav_header_desc">Título</string>
    <string name="action_linkedin">Linkedin</string>
    <string name="action_github">Github</string>

    <string name="titulo_cronologia">Cronologia</string>
    <string name="titulo_de_onde_venho">De Onde Venho</string>
    <string name="titulo_habilitacoes">Habilitações</string>
    <string name="titulo_interesses">Interesses</string>
    <string name="titulo_sobre_mim">Sobre Mim</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
