<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio"
    android:orientation="vertical"
    android:layout_margin="20dp">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/perfil"
        android:layout_margin="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        >

        <Button
            android:id="@+id/btn_habilitacoes"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/titulo_habilitacoes"
            android:textSize="15dp"
            android:drawableTop="@drawable/habilitacoes"
            android:drawablePadding="10dp"
            android:background="@drawable/botao_round"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/btn_cronologia"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/titulo_cronologia"
            android:textSize="15dp"
            android:drawableTop="@drawable/cronologia"
            android:drawablePadding="10dp"
            android:background="@drawable/botao_round"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_interesses"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/titulo_interesses"
            android:textSize="15dp"
            android:drawableTop="@drawable/interesses"
            android:drawablePadding="10dp"
            android:background="@drawable/botao_round"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/btn_deondevenho"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/titulo_de_onde_venho"
            android:textSize="15dp"
            android:drawableTop="@drawable/deondevenho"
            android:drawablePadding="10dp"
            android:background="@drawable/botao_round"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_sobremim"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/titulo_sobre_mim"
        android:background="@drawable/botao_degrade"/>


</LinearLayout>